# mai-hw2

./: .gitignore  JUSTFILE_GUIDE.md  MEMORY_MANAGEMENT.md  README_REFACTORED.md  Task1.ipynb  Task2.ipynb  USAGE_EXAMPLES.md  analyze.py  evaluate.py  justfile  pyproject.toml  requirements.txt  suggestions.txt  task2.py  todo  train.py  train_robust.py
configs/: analysis.yaml  config.yaml  robust.yaml
configs/dataset/: cub200.yaml  flowers102.yaml
configs/model/: linear_probe.yaml  lora.yaml
src/: __init__.py
src/data/: __init__.py  datasets.py  transforms.py
src/evaluation/: evaluator.py
src/models/: __init__.py  linear_probe.py  lora_model.py
src/training/: trainer.py
src/utils/: __init__.py  device_manager.py  retry_decorator.py  visualization.py
